--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             let openMenu = false;
             Chatbot.init({
                 chatflowid: "31707049-53d1-4ff5-8de2-922826e7e15e",
-                apiHost: "flowise.agaransolutions.com",
+                apiHost: "https://flowise.agaransolutions.com",
                 chatflowConfig: {
                     /* Optional Chatflow Config */
                 },
