--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             let openMenu = false;
             Chatbot.init({
                 chatflowid: "31707049-53d1-4ff5-8de2-922826e7e15e",
-                apiHost: "https://flowise.agaransolutions.com",
+                apiHost: "http://128.199.238.255:3000",  // <-- use your own backend server URL here
                 chatflowConfig: {
                     /* Optional Chatflow Config */
                 },
