--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
             let openMenu = false;
             Chatbot.init({
-                chatflowid: "31707049-53d1-4ff5-8de2-922826e7e15e",
-                apiHost: "http://128.199.238.255:3000",  // <-- use your own backend server URL here
+                chatflowid: "1b43721a-ec5e-4e35-9793-e62ef21dc3b3",
+                apiHost: "https://flowise.agaransolutions.com",  // <-- use your own backend server URL here
                 chatflowConfig: {
                     /* Optional Chatflow Config */
                 },
