--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
             import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
             let openMenu = false;
             Chatbot.init({
-                chatflowid: "31707049-53d1-4ff5-8de2-922826e7e15e
-",
+                chatflowid: "31707049-53d1-4ff5-8de2-922826e7e15e",
                 apiHost: "https://flowise.agaransolutions.com",  // <-- use your own backend server URL here
                 chatflowConfig: {
                     /* Optional Chatflow Config */
