--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
             let openMenu = false;
             Chatbot.init({
-                chatflowid: "31707049-53d1-4ff5-8de2-922826e7e15e",
-                apiHost: "https://flowise.agaransolutions.com",  // <-- use your own backend server URL here
+                chatflowid: "8d2493d4-6b53-47bf-98df-70712566772b",
+                apiHost: "https://flowise-56ec.onrender.com",  // <-- use your own backend server URL here
                 chatflowConfig: {
                     /* Optional Chatflow Config */
                 },
